# super-alita

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  0001-todo-models-store.patch  0002-ladder-planner.patch  0003-orchestrator-adapter.patch  0004-ladder-tests.patch  0005-config-router.patch  0016-week0-fast-wins.patch  AGENTS.md  AGENT_MODE_INTEGRATION_COMPLETE.md  BIDIRECTIONAL_TELEMETRY_COMPLETE.md  CORTEX_INTEGRATION_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_REPORT.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  KNOWLEDGE_GRAPH_COMPLETE.md  MULTI_ARMED_BANDIT_COMPLETE.md  Makefile  OaK.md  PATCHMAP.md  README.md  README_INTEGRATION.md  SESSION_COMPLETION_REPORT.md  app.py  audit_agent_features.py  claude_desktop_config.json  complete_agent_demo.py  comprehensive_system_verification.py  constraints.txt  cortex_development_demo.py  debug_fixed.py  debug_matching.py  decision_policy_trials.py  demo_leanrag.py  demo_perplexica_integration.py  docker-compose.yml  (+48 more)
.codex/: setup.sh
.github/: agent-dev-copilot-enhancements.md  agent.yaml  copilot-instructions.md  dependabot.yml  pull_request_template.md
config/: puter_config.py
cortex/: pyproject.toml  requirements.txt
cortex/adapters/: __init__.py  leanrag_adapter.py
cortex/api/: __init__.py
cortex/api/endpoints/: automation.py  ladder.py
cortex/automation/: deployment.py  git_workflow.py  python_tests.py  typescript_tests.py
cortex/common/: __init__.py  logging.py  types.py
cortex/config/: __init__.py  flags.py  planner_config.py
cortex/kg/: __init__.py  embeddings.py  leanrag.py  leanrag_builder.py  leanrag_retrieval.py
cortex/orchestrator/: ladder_adapter.py  router.py  subagent.py
cortex/planner/: __init__.py  interfaces.py  ladder.py  ladder_enhanced.py
cortex/proxy/: __init__.py  copilot_middleware.py  prompting.py
cortex/todo/: __init__.py  models.py  store.py
cortex/tools/: __init__.py  formatters.py  task_spawn.py  testing.py  todo_write.py
docker/: Dockerfile.acp  docker-compose.yml
docs/: PUTER_INTEGRATION.md  agents.md  architecture.md  atoms-bonds.md  diagnostics.md  enhanced_agent_cycle.md  kg_task_integration.md  mcp.md  mcp_integration_summary.md  memory.md  monitoring_detailed.md  perplexica_integration.md  runtime.md  runtime_env_check.md  self-insight-setup-enhanced.md  self-insight-setup.md  testing.md  todo_scripts.md  vscode_builtin_mcp_integration.md
examples/: ladder_planner_demo.py  perplexica_quick_example.py  puter_integration_example.py
mcp_server/: README.md  pyproject.toml
mcp_server/src/mcp_server/: __init__.py  server.py
mcp_server/src/mcp_server/tools/: __init__.py  deepcode_tool.py  format_and_scan.py  mynewtool.py  puter_tool.py
out_patches/: 0001-Enhance-capability-validation-and-telemetry-collecti.patch
reug/: events.py  fsm.py  services.py
reug_runtime/: __init__.py  config.py  router.py  router_tools.py
schema/: alg_extraction_v1_2.json
scripts/: bench_pubsub.py  bidirectional_telemetry.py  debug_fixed.py  (+13 more)
(+507 files in other folders)
