[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-alita"
version = "0.1.0"
requires-python = ">=3.11"
description = "Super Alita - Advanced AI Agent System"
readme = "README.md"
dependencies = [
  "mcp>=1.0.0",
  "black>=24.3.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "libcst>=1.4.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.11",
  "python-dotenv>=1.0.0",
  "google-generativeai>=0.5.2",
  "redis>=5.0.0",
  "numpy>=1.24.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "hypothesis>=6",
  "redis>=5",
  "fakeredis>=2",
  "jsonschema>=4",
  "pytest-asyncio>=0.21",
]
dev = [
  "pre-commit",
  "ruff",
  "black",
  "mypy",
  "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","SIM","PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unreachable = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration_redis: tests that need a real Redis broker",
]
