[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex"
version = "0.1.0"
description = "Cortex: AI Agent Coordination System"
dependencies = [
    "pydantic>=2.7.0",
    "networkx>=3.2.0",
    "python-dotenv>=1.0.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "PyYAML==6.0.1",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black==24.1.0",
    "ruff==0.1.0",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "mypy==1.8.0",
    "pre-commit"
]

gpu = [
    "torch",
    "transformers",
    "accelerate"
]