[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-example"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",   # adjust if needed
  "black>=24.0",
  "ruff>=0.5",
  "libcst>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
